--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+    body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
+canvas {
+  border: 2px solid black; /* Adds border to the canvas */
+  background-image: url(https://images.pexels.com/photos/172276/pexels-photo-172276.jpeg?cs=srgb&dl=pexels-fwstudio-33348-172276.jpg&fm=jpg);
+}
+input{
+    justify-content: center;
+    align-items: center;
+}
+</style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
